crates/observed_macros/src/snapshots/observed_macros__event__tests__error_message_references_excluded_field.snap
---
source: crates/observed_macros/src/event.rs
expression: err
---
log message references `{tag}` but no log attribute with that name exists; available attributes: []
