crates/observed_macros/src/snapshots/observed_macros__event__tests__error_message_references_nonexistent_attr.snap
---
source: crates/observed_macros/src/event.rs
expression: err
---
log message references `{missing}` but no log attribute with that name exists; available attributes: [x]
