crates/observed_macros/src/snapshots/observed_macros__event__tests__event_all_attributes.snap
---
source: crates/observed_macros/src/event.rs
expression: output
---
const _: () = {
    impl ::observed::Event for FullEvent {
        const DESCRIPTION: ::observed::metadata::EventDescription = ::observed::metadata::EventDescription::new(
            "http.outgoing_request",
            ::core::option::Option::Some(::core::any::TypeId::of::<FullEvent>()),
            ::core::option::Option::Some(
                ::observed::metadata::LogDescription::new(
                    "http.outgoing_request",
                    ::observed::Severity::Error,
                    ::core::option::Option::Some("Outgoing HTTP request"),
                ),
            ),
            ::core::option::Option::Some(
                ::observed::metadata::MetricDescription::new(
                    "http.request.count",
                    ::observed::metadata::InstrumentKind::Counter,
                    "",
                    "",
                ),
            ),
            true,
            false,
        );
        fn visit_fields(
            &self,
            visitor: &mut ::observed::processing::FieldVisitorFn<'_>,
        ) -> ::core::ops::ControlFlow<()> {
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "method",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("http.method"),
                    ),
                    ::core::option::Option::None,
                );
                visitor(
                    &FIELD_DESC,
                    &|engine| ::observed::Value::from_redacted(&self.method, engine),
                )?;
            }
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "operation",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("operation"),
                    ),
                    ::core::option::Option::Some(
                        ::observed::metadata::MetricFieldEntry::dimension("op"),
                    ),
                );
                visitor(
                    &FIELD_DESC,
                    &|_| ::observed::Value::from(self.operation.clone()),
                )?;
            }
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "duration",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("duration"),
                    ),
                    ::core::option::Option::Some(
                        ::observed::metadata::MetricFieldEntry::instrument(
                            "duration",
                            ::observed::metadata::MetricDescription::new(
                                "request_duration",
                                ::observed::metadata::InstrumentKind::Histogram,
                                "",
                                "",
                            ),
                        ),
                    ),
                );
                visitor(
                    &FIELD_DESC,
                    &|_| ::observed::Value::from(self.duration.clone()),
                )?;
            }
            ::core::ops::ControlFlow::Continue(())
        }
    }
};
